--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=ProjectManagement;encrypt=true;trustServerCertificate=true;
-spring.datasource.username=sa
+# MySQL Connection Properties
+spring.datasource.url=jdbc:mysql://gdb:3306/projectm?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
+spring.datasource.username=root
 spring.datasource.password=root
+# JPA Properties
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
